--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Projeto site">
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <me25px !important;!important;me="author" content="William araújo, Vitor Emanuel, Francisco Neto"> 
-        <title>TiFood</title>
+        <title>Laricca</title>
         <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body class="corpo">
